--- a/SmartCMS/Views/CMS/HotWords.cshtml
+++ b/SmartCMS/Views/CMS/HotWords.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<String>
+﻿@model IEnumerable<SmartCMS.Models.KeywordViewModel>
 
 @{
     ViewBag.Title = "热词一览";
@@ -17,9 +17,13 @@
     </div>
     <div class="panel-body">
         <hr />
-        @foreach (String keyword in Model)
+        @foreach (SmartCMS.Models.KeywordViewModel item in Model)
         {
-            <a href="~/CMS/Search/@keyword" class="category-item btn btn-default"><b>@keyword</b></a>
+            <div class="hot-word-container">
+                <a href="~/CMS/Search/@item.Keyword" class="category-item btn btn-default hot-word"><b>@item.Keyword</b></a>
+                <a href="javascript:DeleteKeyWord('@item.Keyword');" class="delete-hot-word" title="删除"></a>
+                <span class="badge badge-trp hot-word-count">@item.Count</span>
+            </div>
         }
     </div>
     <!-- /.panel-body -->
@@ -27,3 +31,34 @@
         &nbsp;
     </div>
 </div>
+
+@using (Html.BeginForm("DeleteHotWord", "CMS", FormMethod.Post, new { id = "deleteKeywordForm", style = "display:none;" }))
+{
+    @Html.AntiForgeryToken()
+    <input type="hidden" name="id" id="delKey" value="" />
+}
+
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="deleteKeywordModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">删除热词</h4>
+            </div>
+            <div class="modal-body">确定要删除该热词吗？</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-danger" onclick="$('#deleteKeywordForm').submit();">确认</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<script>
+    function DeleteKeyWord(s)
+    {
+        $('#delKey').val(s);
+        $('#deleteKeywordModal').modal('show');
+    }
+</script>
