--- a/SmartCMS/Views/Shared/_Layout.cshtml
+++ b/SmartCMS/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                                         <ul class="dropdown-menu ">
                                             <li>@Html.ActionLink("知识分类", "Categories", "CMS")</li>
                                             <li class="divider"></li>
-                                            <li>@Html.ActionLink("热词一览", "HotWords", "CMS")</li>                                            
+                                            <li>@Html.ActionLink("热词一览", "HotWords", "CMS")</li>
                                         </ul>
                                     </li>
                                 }
@@ -104,7 +104,7 @@
                                             问答管理 <b class="caret"></b>
                                         </a>
                                         <ul class="dropdown-menu ">
-                                            <li>@Html.ActionLink("待回答问题", "PendingQuestions", "CMS")</li>
+                                            <li>@Html.ActionLink("待解答问题", "QuestionCategories", "CMS")</li>
                                         </ul>
                                     </li>
                                 }
