--- a/SmartCMS/Views/CMS/EditArticle.cshtml
+++ b/SmartCMS/Views/CMS/EditArticle.cshtml
@@ -56,7 +56,7 @@
 
                 <div class="form-group">
                     <div class='input-group date'>
-                        @Html.TextAreaFor(m => m.Answer, new { id = "myEditor", style = "width:698px;height:320px;padding-left:10px;", value = Model.Answer, placeholder = "词条或问题解答", maxlength = 1000 })                        
+                        @Html.TextAreaFor(m => m.Answer, new { id = "myEditor", style = "width:698px;height:320px;padding-left:10px;", value = Model.Answer, placeholder = "词条解析或问题解答", maxlength = 1000 })                        
                     </div>
                 </div>
                 <div class="form-group">
