--- a/SmartCMS/Views/CMS/Search.cshtml
+++ b/SmartCMS/Views/CMS/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SmartCMS.Models.ArticleViewModel>
 
 @{
-    ViewBag.Title = "搜查结果";
+    ViewBag.Title = "查询结果";
 }
 
 <div id="breadcrumbs">
@@ -24,13 +24,13 @@
             <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                 <thead>
                     <tr>
-                        <th>问题</th>
-                        <th>分类</th>
-                        <th>关键字</th>
-                        <th>编辑</th>
-                        <th style="text-align: center;">添加时间</th>
-                        <th style="text-align: center;">热度</th>
-                        <th style="text-align: center;">操作</th>
+                        <th style="text-align: left;">知识词条&问题</th>
+                        <th style="text-align: left;">知识分类</th>
+                        <th style="text-align: left;">关键词</th>
+                        <th style="text-align: left;">录入人</th>
+                        <th>录入时间</th>
+                        <th>热度</th>
+                        <th>操作</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -39,8 +39,8 @@
                         <tr class="odd">
                             <td style="text-align: left;"><a href="~/CMS/EditArticle/@item.Id">@Html.DisplayFor(modelItem => item.Question)</a></td>
                             <td style="text-align: left;">@Html.DisplayFor(modelItem => item.CategoryName)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Keywords)</td>
-                            <td style="text-align: left;">@Html.DisplayFor(modelItem => item.CreatedBy)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Keywords)</td>
+                            <td>@Html.DisplayFor(modelItem => item.CreatedBy)</td>
                             <td style="text-align: center;">@Html.DisplayFor(modelItem => item.CreatedAt)</td>
                             <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Hits)</td>
                             <td style="text-align: center;">
