--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -1273,3 +1273,41 @@ ul.dropdown-menu
     display:inline-block;
     margin-right: -40px;
 }
+
+
+.file {
+    position: relative;
+    display: inline-block;
+    background: #ddd;
+    border: 1px solid #bbb;
+    border-radius: 4px;
+    padding: 4px 12px;
+    overflow: hidden;
+    text-decoration: none;
+    text-indent: 0;
+    line-height: 20px;
+    float:left;
+}
+.file input {
+    position: absolute;
+    font-size: 100px;
+    right: 0;
+    top: 0;
+    opacity: 0;
+}
+.file:hover {
+    background: #eee;
+    border-color: #bbb;
+    text-decoration: none;
+}
+#selectedFile{
+    float: left;
+    margin: 9px 10px 5px 6px;
+}
+
+textarea:-ms-input-placeholder,
+textarea::-moz-placeholder,
+textarea:-moz-placeholder,
+input::-webkit-input-placeholder {
+    color: #e80c4d !important; 
+}
