--- a/SmartCMS/Views/CMS/EditArticle.cshtml
+++ b/SmartCMS/Views/CMS/EditArticle.cshtml
@@ -39,7 +39,7 @@
         }
 
 
-        @using (Html.BeginForm("EditArticle", "CMS", new { id = Model.Id }, FormMethod.Post))
+        @using (Html.BeginForm("EditArticle", "CMS", new { id = Model.Id }, FormMethod.Post, new { role = "form", enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
             @Html.HiddenFor(m => m.CategoryId)
@@ -69,6 +69,19 @@
                     <div class="keyword-tips">多个关键字以空格隔开</div>
                 </div>
                 
+                <div class="form-group" style="height:40px;">
+                    <a href="javascript:;" class="file">
+                        选择附件文件
+                        <input type="file" name="file" />
+                    </a>
+                    <span id="selectedFile">
+                        @if(!string.IsNullOrEmpty(Model.Attachment))
+                        {
+                            <a href="@Model.Attachment" target="_blank">查看附件</a>
+                        }
+                    </span>
+                </div>
+
                 <div class="form-group category-info">
                     Created by @Model.CreatedBy at @Html.DisplayFor(m => m.CreatedAt)
                 </div>
@@ -82,3 +95,20 @@
 
     </div>
 </div>
+
+
+<script>
+
+    $(".file").on("change", "input[type='file']", function () {
+        var filePath = $(this).val();
+        if (filePath.length>0) {
+            var arr = filePath.split('\\');
+            var fileName = arr[arr.length - 1];
+            $("#selectedFile").html(fileName);
+        } else {
+            $("#selectedFile").html("");
+            return false;
+        }
+    })
+
+</script>
