--- a/SmartCMS/Views/CMS/Category.cshtml
+++ b/SmartCMS/Views/CMS/Category.cshtml
@@ -75,7 +75,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (SmartCMS.Models.ArticleViewModel item in Model.Articles)
+                    @foreach (SmartCMS.Models.KnowledgeViewModel item in Model.Articles)
                     {
                         <tr class="odd">
                             <td style="text-align: left;"><a href="~/CMS/EditArticle/@item.Id">@Html.DisplayFor(modelItem => item.Question)</a>@if (!String.IsNullOrEmpty(item.Attachment)) { <a href="@item.Attachment" target="_blank"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>}</td>
