--- a/SmartCMS/Views/CMS/EditArticle.cshtml
+++ b/SmartCMS/Views/CMS/EditArticle.cshtml
@@ -1,4 +1,4 @@
-﻿@model SmartCMS.Models.ArticleViewModel
+﻿@model SmartCMS.Models.KnowledgeViewModel
 @{
     ViewBag.Title = "知识词条修改";
 }
@@ -77,7 +77,7 @@
                     <span id="selectedFile">
                         @if(!string.IsNullOrEmpty(Model.Attachment))
                         {
-                            <a href="@Model.Attachment" target="_blank">查看附件</a>
+                            <a href="@Model.Attachment" target="_blank">查看附件<span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>
                         }
                     </span>
                 </div>
