--- a/SmartCMS/Views/Shared/_Layout.cshtml
+++ b/SmartCMS/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                                             问答管理 <b class="caret"></b>
                                         </a>
                                         <ul class="dropdown-menu ">
-                                            <li>@Html.ActionLink("待解答问题", "QuestionCategories", "CMS")</li>
+                                            <li>@Html.ActionLink("问题解答", "QuestionCategories", "CMS")</li>
                                         </ul>
                                     </li>
                                 }
