--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -1313,3 +1313,29 @@ input::-webkit-input-placeholder {
     color: #e80c4d !important; 
 }
     */
+
+h1.question{
+    font-family:微软雅黑 !important;
+}
+
+.question-info{
+    color: #999;
+    font-size:10px;
+}
+i.glyphicon{
+    color: #999;
+    font-size: 0.9em;
+    margin-right:5px;
+}
+
+h3 i.glyphicon
+{
+    color:#97d697;
+}
+
+hr.question{
+    width: 100%;
+    background: #d0c8c8;
+    height: 1px;
+    margin: 20px 0 20px 0;
+}
